--- a/seantis/dir/events/locales/de/LC_MESSAGES/seantis.dir.events.po
+++ b/seantis/dir/events/locales/de/LC_MESSAGES/seantis.dir.events.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2012-09-13 11:00+0000\n"
+"POT-Creation-Date: 2012-10-15 09:41+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -14,91 +14,212 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
 
-#: ./item.py:45
+#: ./item.py:177
+msgid "${type} bigger than ${max} Megabyte are not allowed"
+msgstr "${type} grösser als ${max} Megabyte sind nicht erlaubt"
+
+#: ./item.py:63
 msgid "Attachment 1"
-msgstr ""
+msgstr "Anhang 1"
 
-#: ./item.py:50
+#: ./item.py:68
 msgid "Attachment 2"
-msgstr ""
+msgstr "Anhang 2"
 
-#: ./item.py:104
+#: ./item.py:212
+#: ./templates/item.pt:91
+msgid "Attachments"
+msgstr "Anhänge"
+
+#: ./templates/directory.pt:83
+msgid "Calendar for all events"
+msgstr "Kalender für alle Events"
+
+#: ./templates/item.pt:106
+msgid "Calendar for all occurrences of this event"
+msgstr "Kalender für alle Wiederholungen dieses Events"
+
+#: ./templates/directory.pt:86
+msgid "Calendar for events matching the current filter"
+msgstr "Kalender für Events des aktuellen Filters"
+
+#: ./templates/item.pt:114
+msgid "Calendar for this event"
+msgstr "Kalender für diesen Event"
+
+#: ./templates/item.pt:109
+msgid "Calendar for this occurrence only"
+msgstr "Kalender nur für diese Wiederholung"
+
+#: ./templates/directory.pt:80
+#: ./templates/item.pt:103
+msgid "Calendars (iCal)"
+msgstr "Kalender (iCal)"
+
+#: ./item.py:122
 msgid "Contact Email"
-msgstr ""
+msgstr "Kontakt Email"
 
-#: ./item.py:98
+#: ./item.py:116
 msgid "Contact Name"
-msgstr ""
+msgstr "Kontakt Name"
 
-#: ./item.py:110
+#: ./item.py:128
 msgid "Contact Phone"
-msgstr ""
+msgstr "Kontakt Telefon"
+
+#: ./templates/directory.pt:74
+msgid "Date"
+msgstr "Datum"
+
+#: ./dates.py:163
+msgid "Day after Tomorrow"
+msgstr "Übermorgen"
+
+#: ./item.py:219
+msgid "Event end before start"
+msgstr "Event endet bevor er beginnt"
 
 #: ./profiles/default/types/seantis.dir.events.directory.xml
 msgid "Events Directory"
-msgstr ""
+msgstr "Events Verzeichnis"
 
 #: ./profiles/default/types/seantis.dir.events.item.xml
 msgid "Events Directory Item"
-msgstr ""
-
-#: ./item.py:68
-msgid "Housenumber"
-msgstr ""
-
-#: ./directory.py:12
-msgid "Image"
-msgstr ""
-
-#: ./item.py:56
-msgid "Locality"
-msgstr ""
-
-#: ./item.py:35
-msgid "Long Description"
-msgstr ""
-
-#: ./item.py:40
-msgid "Opening Hours"
-msgstr ""
-
-#: ./item.py:92
-msgid "Organizer"
-msgstr ""
-
-#: ./item.py:116
-msgid "Prices"
-msgstr ""
-
-#: ./item.py:29
-msgid "Short Description"
-msgstr ""
-
-#: ./item.py:62
-msgid "Street"
-msgstr ""
-
-#: ./item.py:23
-msgid "Submitter Email"
-msgstr ""
-
-#: ./item.py:18
-msgid "Submitter Name"
-msgstr ""
-
-#: ./item.py:122
-msgid "Tickets / Registration"
-msgstr ""
-
-#: ./item.py:80
-msgid "Town"
-msgstr ""
+msgstr "Events Verzeichnis Eintrag"
 
 #: ./item.py:86
-msgid "Website"
-msgstr ""
+msgid "Housenumber"
+msgstr "Hausnummer"
+
+#: ./directory.py:16
+#: ./item.py:58
+msgid "Image"
+msgstr "Bild"
+
+#: ./item.py:191
+msgid "Images"
+msgstr "Bilder"
 
 #: ./item.py:74
+#: ./templates/item.pt:53
+msgid "Locality"
+msgstr "Lokalität"
+
+#: ./item.py:53
+msgid "Long Description"
+msgstr "Lange Beschreibung"
+
+#: ./dates.py:213
+msgid "Next Month"
+msgstr "Nächsten Monat"
+
+#: ./dates.py:193
+msgid "Next Week"
+msgstr "Nächste Woche"
+
+#: ./dates.py:176
+msgid "Next Weekend"
+msgstr "Nächstes Wochenende"
+
+#: ./dates.py:230
+msgid "Next Year"
+msgstr "Nächstes Jahr"
+
+#: ./templates/directory.pt:30
+msgid "No Events"
+msgstr "Keine Events"
+
+#: ./item.py:110
+#: ./templates/item.pt:66
+msgid "Organizer"
+msgstr "Organisator"
+
+#: ./item.py:195
+msgid "PDF"
+msgstr "PDF"
+
+#: ./item.py:134
+msgid "Prices"
+msgstr "Preise"
+
+#: ./item.py:47
+msgid "Short Description"
+msgstr "Kurzbeschrieb"
+
+#: ./item.py:80
+msgid "Street"
+msgstr "Strasse"
+
+#: ./item.py:41
+msgid "Submitter Email"
+msgstr "Erfasser Email"
+
+#: ./item.py:36
+msgid "Submitter Name"
+msgstr "Erfasser Name"
+
+#: ./dates.py:208
+msgid "This Month"
+msgstr "Diesen Monat"
+
+#: ./dates.py:185
+msgid "This Week"
+msgstr "Diese Woche"
+
+#: ./dates.py:170
+msgid "This Weekend"
+msgstr "Dieses Wochenende"
+
+#: ./dates.py:221
+msgid "This Year"
+msgstr "Dieses Jahr"
+
+#: ./templates/item.pt:81
+msgid "Ticket"
+msgstr "Ticket"
+
+#: ./item.py:140
+msgid "Tickets / Registration"
+msgstr "Tickets / Registration"
+
+#: ./dates.py:49
+msgid "Today"
+msgstr "Heute"
+
+#: ./dates.py:52
+msgid "Tomorrow"
+msgstr "Morgen"
+
+#: ./item.py:98
+msgid "Town"
+msgstr "Ort"
+
+#: ./item.py:189
+msgid "Unknown image format"
+msgstr "Unbekanntes Bild-Format"
+
+#: ./item.py:208
+msgid "Unsupported fileformat. Supported is ${formats}"
+msgstr "Nicht unterstütztes Dateiformat. Unterstützt wird ${formats}"
+
+#: ./item.py:104
+msgid "Website"
+msgstr "Webseite"
+
+#: ./directory.py:28
+msgid "What"
+msgstr "Was"
+
+#: ./directory.py:28
+msgid "Where"
+msgstr "Wo"
+
+#: ./item.py:170
+msgid "You may not add more than ${max} occurences"
+msgstr "Sie dürfen nicht mehr als ${max} Wiederholungen erfassen"
+
+#: ./item.py:92
 msgid "Zipcode"
-msgstr ""
+msgstr "PLZ"
 
