Fixes a number of IE issues. Needs latest plone.formwidget.recurrence and plone.formwidget.datetime releases

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,25 @@
 
 # Changelog
 
-1.2a
-----
+1.0a2
+-----
 
-- Initial release (version aligned with seantis.dir.base)
+- It is now easier to enter common events like events which happen on a single
+  day, or events which happen on different days.
+
+- All-day events in different timezones than the server no longer lead to
+  crashes in the middle of the night
+
+- Events are no longer shown on the wrong day
+
+- Single events are no longer shown twice
+
+- Deleting an event (as opposed to denying it's publication) no longer results
+  in a corrupt event index.
+
+- Event submission now works in IE7/IE8 on Windows XP
+
+1.0a1
+-----
+
+- Initial release
