Remove superfluous point in date. Fixes #7

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,7 +6,7 @@
 
 - Fixes ical export error [href]
 - Fixes typos in add event form [msom]
-
+- Fixes date formating with superfluous point [msom]
 
 1.0a3
 -----
