Add (source-aware) content rule condition for import

--- a/seantis/dir/events/locales/de/LC_MESSAGES/plone.po
+++ b/seantis/dir/events/locales/de/LC_MESSAGES/plone.po
@@ -45,3 +45,6 @@ msgstr "Veranstaltung melden"
 
 msgid "Submitted"
 msgstr "Gemeldet"
+
+msgid "Event Import Source"
+msgstr "Veranstaltung: Importquelle"
